# GW2_RotaHelper

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  ELITE_INSIGHTS_SETUP.md  ISSUES.md  README.md  ei_config.conf  pyproject.toml  requirements.txt
GW2EI/: GuildWars2EliteInsights.deps.json  GuildWars2EliteInsights.dll.config
data/: General.xml
data/bench/: BSW_FAF.json  BSW_FAF_extracted.json  Mirage_IH.html  Mirage_IH.json  Mirage_IH_extracted.json  Scarpper_BS.html  Scarpper_BS.json  Scarpper_BS_extracted.json  pscrapper_42138_StdGolem_kill.json  pscrapper_42138_StdGolem_kill_rotation.json
data/bench/alac/condition/: condition_alacrity_amalgam_steamshrieker_spear_v4.json  condition_alacrity_amalgam_two_kits_spear_v4.json  condition_alacrity_amalgam_two_kits_v4.json  condition_alacrity_antiquary_scepter_dagger_v4.json  condition_alacrity_antiquary_v4.json  condition_alacrity_mechanist_1_kit_v4.json  condition_alacrity_mechanist_one_kit_spear_v4.json  condition_alacrity_mechanist_two_kits_spear_v4.json  condition_alacrity_mechanist_v4.json  condition_alacrity_mirage_axe_torch_staff_v4.json  condition_alacrity_mirage_staff_axe_torch_v4.json  condition_alacrity_mirage_staff_only_v4.json  condition_alacrity_mirage_staff_v4.json  condition_alacrity_renegade_shortbow_mace_axe_v4.json  condition_alacrity_renegade_spear_mace_axe_v4.json  condition_alacrity_renegade_v4.json  condition_alacrity_scourge_scepter_torch_pistol_v4.json  (+13 more)
data/html/: build_metadata.json
data/skills/: gw2_skills_en.json  gw2_skills_metadata.json  gw2_uncategorized_skills.json
internal_data/: dps_report_links.json  manual_log_list.json
internal_data/html/: build_metadata.json  dps_report_links.json  skill_mappings.json
internal_data/skills/: gw2_skills_metadata.json
resources/: TEX_GW2RotaHelperHOVER_data.h  TEX_GW2RotaHelperNORMAL_data.h
scripts/: GetSpecialSkills.py  README.md  bench_list.py  create_version_file.py  extract_local_rotation.py  fetch_gw2_skills.py  get_benches.py  get_benches_v1.py  get_benches_v2.py  get_benches_v3.py  get_benches_v4.py  get_html_logs.py  get_sc_metadata.py  get_skill_enum.py  get_skill_mapping.py  get_special_skills.py  html_log_to_json.py  img_to_c_array.py  requirements.txt  visit_all_beches.py
src/: ArcEvents.cpp  ArcEvents.h  Builds.cpp  Builds.h  Constants.h  Defines.h  ExtEvents.cpp  ExtEvents.h  FileUtils.cpp  FileUtils.h  KeyboardCapture.cpp  KeyboardCapture.h  LogData.cpp  LogData.h  MapUtils.cpp  MapUtils.h  MemoryReader.cpp  MemoryReader.h  MumbleUtils.cpp  MumbleUtils.h  OptionsRender.cpp  OptionsRender.h  Render.cpp  Render.h  RenderUtils.cpp  RenderUtils.h  Rotation.cpp  Rotation.h  RotationRender.cpp  RotationRender.h  Settings.cpp  Settings.h  Shared.cpp  Shared.h  SkillData.cpp  SkillData.h  SkillIDs.h  Textures.cpp  Textures.h  Types.h  (+9 more)
(+639 files in other folders)
